Z-index added to mobile navbar to fix drawing issues for form pages

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ img{
     display: grid;
     grid-template-columns: 30% 40% 30%;
     grid-template-rows: 4rem;
+    z-index: 1;
 }
 
 .l-nav-links{
@@ -481,7 +482,7 @@ img{
     margin:auto;
     width: 80%;
     padding:0;
-    height: 80%;
+    height: 50%;
 }
 
 /*Form submission code pulled from https://www.bram.us/2020/11/04/preventing-double-form-submissions/*/
